Blender 2D stabilisation node issue when autoscale is selected #52531

Closed
opened 2017-08-25 00:24:17 +02:00 by Luiz G. de Medeiros Ventura · 4 comments

System Information
Linux Ubuntu 17.04 on a Aspire V3 - 772G with a NVIDIA GeForce GTX 760M

Blender Version
Broken: 2.78c and 2.79 release candidate
Worked: not working in any case

Short description of error
2D stabilisation not working with autoscale - frames are randomly rendered some correctly stabilised, others in the original video position/rotation/scale, what leads to an output video flickery, jumpy.

Exact steps for others to reproduce the error
First step: Movie Clip Editor. Two makers are successfully tracked till the end of a loaded footage. Display Stabilization checked; 2D Stabilization checked; both tracks are added as Tracks for Location and Tracks for Rotation. Auto Scale is checked and some values are given to location and rotation influences.
Compositing: simplest 2D stabilisation scheme: MovieClipNode.image --> Stabilize2D.imageInput; Stabilize2D.imageOutput --> (Composite AND Viewer).
Finally: output file(s) selected to render (tried with AVI, MP4 and PNG sequence, apparently no matter the output format). Render animation. Output flickering randomly between stabilised and not stabilised frames.

This error was also reported by other users: https:*blender.stackexchange.com/questions/62502/stabilize-2d-node-creates-jumpy-renders, https:*blenderartists.org/forum/showthread.php?419514-2D-stabilization-is-jumpy-on-render

**System Information** Linux Ubuntu 17.04 on a Aspire V3 - 772G with a NVIDIA GeForce GTX 760M **Blender Version** Broken: 2.78c and 2.79 release candidate Worked: not working in any case **Short description of error** 2D stabilisation not working with autoscale - frames are randomly rendered some correctly stabilised, others in the original video position/rotation/scale, what leads to an output video flickery, jumpy. **Exact steps for others to reproduce the error** **First step:** Movie Clip Editor. Two makers are successfully tracked till the end of a loaded footage. Display Stabilization checked; 2D Stabilization checked; both tracks are added as Tracks for Location and Tracks for Rotation. Auto Scale is checked and some values are given to location and rotation influences. **Compositing: simplest 2D stabilisation scheme:** MovieClipNode.image --> Stabilize2D.imageInput; Stabilize2D.imageOutput --> (Composite AND Viewer). **Finally:** output file(s) selected to render (tried with AVI, MP4 and PNG sequence, apparently no matter the output format). Render animation. Output flickering randomly between stabilised and not stabilised frames. **This error was also reported by other users:** https:*blender.stackexchange.com/questions/62502/stabilize-2d-node-creates-jumpy-renders, https:*blenderartists.org/forum/showthread.php?419514-2D-stabilization-is-jumpy-on-render

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Blentura

Added subscriber: @Blentura
Sergey Sharybin was assigned by Bastien Montagne 2017-08-30 19:27:20 +02:00

This issue was referenced by 4a744727be

This issue was referenced by 4a744727be6c3cba8721f60d15de8d8162adab5e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52531
No description provided.