Fix T52531: Blender 2D stabilisation node issue when autoscale is selected

Threading conflict, should be safe for 2.79.